--- a/13_dlqe/CodegenTESTBed/codegen/lib/kalman_dlqe1/html/kalman_dlqe11_watch.html
+++ b/13_dlqe/CodegenTESTBed/codegen/lib/kalman_dlqe1/html/kalman_dlqe11_watch.html
@@ -11,14 +11,14 @@
 </tr>
 </thead>
 <tbody onmouseover="watchMouseOver(event);" onmouseout="watchMouseOut(event);" onclick="watchClick(event);">
-<tr class="var type1" id="S2T1">
+<tr class="var type1" id="S2T2">
 <td id="blank"></td><td>1</td>
 <td id=""><a href="#">x_aposteriori</a></td>
-<td>I/O</td><td class="watchsize" id="6">3 x 1</td>
+<td>Output</td><td class="watchsize" id="6">3 x 1</td>
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S3T2">
+<tr class="var type1" id="S3T1">
 <td id="blank"></td><td>2</td>
 <td id=""><a href="#">A</a></td>
 <td>Input</td><td class="watchsize" id="7">3 x 3</td>
@@ -32,15 +32,22 @@
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S5T1">
+<tr class="var type1" id="S5T2">
 <td id="blank"></td><td>4</td>
 <td id=""><a href="#">K</a></td>
 <td>Input</td><td class="watchsize" id="6">3 x 1</td>
 <td class="watchclass">single</td>
 <td class="watchcomplex">No</td>
 </tr>
-<tr class="var type1" id="S6T9">
+<tr class="var type1" id="S6T2">
 <td id="blank"></td><td>5</td>
+<td id=""><a href="#">x_aposteriori_k</a></td>
+<td>Input</td><td class="watchsize" id="6">3 x 1</td>
+<td class="watchclass">single</td>
+<td class="watchcomplex">No</td>
+</tr>
+<tr class="var type1" id="S7T9">
+<td id="blank"></td><td>6</td>
 <td id=""><a href="#">z</a></td>
 <td>Input</td><td class="watchsize" id="1">1 x 1</td>
 <td class="watchclass">single</td>
